--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "bcrypt": "^1.0.3",
     "express": "^4.16.2",
     "firebase": "^5.6.0",
     "mongodb": "^3.0.5",
@@ -12,11 +11,11 @@
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4",
-    "sqlite3": "^3.1.13"
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
