--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "redux": "^4.0.1",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
   },
