add graphqlAPI with prisma and mongobdd local

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "babel-cli": "^6.26.0",
     "express": "^4.16.2",
     "firebase": "^5.6.0",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-yoga": "^1.16.7",
     "mongodb": "^3.0.5",
     "npm": "^5.10.0",
     "path": "^0.12.7",
+    "prisma-binding": "^2.2.11",
+    "prisma-client-lib": "^1.22.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.0",
