--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.22",
     "babel-cli": "^6.26.0",
     "express": "^4.16.2",
     "firebase": "^5.6.0",
+    "graphql": "^14.0.2",
     "graphql-iso-date": "^3.6.1",
     "graphql-yoga": "^1.16.7",
     "mongodb": "^3.0.5",
@@ -14,11 +16,15 @@
     "prisma-binding": "^2.2.11",
     "prisma-client-lib": "^1.22.2",
     "react": "^16.2.0",
+    "react-apollo": "^2.3.3",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "redux": "^4.0.1",
+    "redux-observable": "^1.0.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
   },
