--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "semi": ["error", "never"],
     "react/prop-types": 0,
     "no-underscore-dangle": 0,
-    "no-console": 0
+    "no-console": 0,
+    "arrow-parens": 0
   }
 }
